--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,15 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/Shop_Project_DB
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 server.address=0.0.0.0
 server.port=8080
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
