--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Shop_Project_DB
+spring.datasource.url=jdbc:postgresql://shop_db:5432/Shop_Project_D
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
