--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
 #5432 for local test, 5433 for container
-spring.datasource.url=jdbc:postgresql://localhost:5433/Shop_Project_DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/Shop_Project_DB
 #spring.datasource.url=jdbc:postgresql://shop_db:5433/Shop_Project_D
 spring.datasource.username=postgres
 spring.datasource.password=1234
@@ -27,3 +27,6 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.web.csrf=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
