--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,6 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.web.csrf=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 
-spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
