--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,13 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 
 #5432 for local test, 5433 for container
-spring.datasource.url=jdbc:postgresql://localhost:5433/Shop_Project_DB
-#spring.datasource.url=jdbc:postgresql://shop_db:5433/Shop_Project_D
+spring.datasource.url=jdbc:postgresql://localhost:5432/Shop_Project_DB
+#spring.datasource.url=jdbc:postgresql://localhost:5433/Shop_Project_DB
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.address=0.0.0.0
 server.port=8080
@@ -32,3 +33,4 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
